fix navbar on mobile

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -2287,3 +2287,7 @@
 #contacting {
   font-family: sans-serif;
 }
+#appear {
+  z-index: 100;
+  text-align: center;
+}
